src/components/Song/Song.css
.song {
  margin-bottom: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
  background-color: rgb(246, 183, 183);
  border-radius: 5px;
  position: relative;
  max-width: 348px;
}

.song__title {
  margin-bottom: 10px;
  font-size: 20px;
}

.songs {
  /* border: 1px solid white; */
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 40px;
}

.song__image {
  border: 1px solid black;
  filter: brightness(1);
  height: 300px;
  width: 300px;
  /* margin-bottom: 10px; */
  cursor: pointer;
  transition: filter .2s ease-in-out;
  object-fit: cover;
  object-position: center;
}

.song__image_lyrics_visible {
  filter: brightness(.5);
  height: 300px;
  width: 300px;
  transition: filter .2s ease-in-out;
}

.song__image:hover{
  filter: brightness(.5)
}

.song__lyrics {
  user-select: none;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  color: white;
  font-size: 10px;
  width: 300px;
  padding: 5px;
  line-height: 10px;
  top: 60px;
  transition: visibility .2s ease-in-out, opacity .2s ease-in-out;
}

.song__lyrics_visible{
  user-select: none;
  position: absolute;
  color: white;
  font-size: 11px;
  width: 300px;
  padding: 5px;
  line-height: 10px;
  top: 60px;
  visibility: visible;
  opacity: 1;
  transition: visibility .2s ease-in-out, opacity .2s ease-in-out;
}

.song__image-lyric-container {
  width: 300px;
  height: 300px;
  margin-bottom: 10px;
  cursor: pointer;
}

